syntax = "proto3";

package cao_intents;

option go_package = "github.com/caolo-game/cao-rt/cao_intents_pb";

message MineIntent
{
    int64 targetId = 1;
}

message DropoffIntent
{
    int64 targetId = 1;
}
