syntax = "proto3";

package cao_world;

import "cao_common.proto";

message RoomObjects
{
    cao_common.Axial roomId = 1;

    cao_common.Json bots = 2;
    cao_common.Json structures = 3;
    cao_common.Json resources = 4;
}

message WorldEntities
{
    repeated RoomObjects rooms = 1;
}

message Empty { }

service World
{
    /// Stream the entities on updates
    rpc Entities(Empty) returns (stream WorldEntities) { }
}
